k8s/deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-module
spec:
  selector:
    app: registry-module
  ports:
    - name: http
      port: 80
      targetPort: 8002
